# world-clocks

./: Cargo.toml  Cross.toml  README.md  justfile
res/: it.jmwh.WorldClocks.desktop  it.jmwh.WorldClocks.metainfo.xml
src/: app.rs  config.rs  editor.rs  main.rs  tz.rs
src/core/: localization.rs
