[package]
name = "world-clocks"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"
authors = ["Jarrad Whitaker <akdor1154@gmail.com>"]
description = "COMIC Panel applet to show clocks in arbitrary timezones."

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
i18n-embed-fl = "0.8"
itertools = "0.14.0"
once_cell = "1.21.3"
open = "5.1.3"
regex = "1.11.1"
rust-embed = "8.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["time"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tzfile = "0.1.3"
walkdir = "2.5.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[package.metadata.deb]
name = "cosmic-world-clocks"
assets = [
    [
        "target/release/world-clocks",
        "usr/bin/",
        "755",
    ],
    [
        "res/*.desktop",
        "usr/share/applications/",
        "644",
    ],
    [
        "res/*.metainfo.xml",
        "usr/share/metainfo/",
        "644",
    ],
    [
        "res/icons/**/*.svg",
        "usr/share/icons/",
        "644",
    ],
]
depends = ["libc6", "libxkbcommon0", "tzdata"]

[profile.release]
lto = false
